# cinnamos

./: .gitignore  Cargo.toml  Makefile.toml  boot.cmd  image.its  run-qemu.sh
crates/cinnamos-kernel/: Cargo.toml  build.rs
crates/cinnamos-kernel/src/: bits.rs  devicetree.rs  dtb.rs  hloc.rs  lib.rs  macros.rs  main.rs  panic.rs  rel.rs  sym.rs  trap.rs
crates/cinnamos-kernel/src/arch/: arch.rs  boot.rs  context.rs  cpu.rs  mem.rs  mod.rs
crates/cinnamos-kernel/src/arch/riscv32/: boot.rs  context.rs  cpu.rs  mem.rs  mod.rs  riscv32.rs  trap.rs
crates/cinnamos-kernel/src/arch/riscv32/vms/: mod.rs  sv32.rs  vms.rs
crates/cinnamos-kernel/src/arch/riscv64/: context.rs  hloc.rs  interrupt.rs  mod.rs  paddr.rs  sv48.rs  timer.rs  trap.rs  vaddr.rs
crates/cinnamos-kernel/src/asm/: arch_riscv32.s  boot.s  common.s  mod.rs  sym.s  trap.s
crates/cinnamos-kernel/src/cpu/: cpu.rs  mod.rs
crates/cinnamos-kernel/src/device/: uart.rs
crates/cinnamos-kernel/src/device/driver/: uart.rs
crates/cinnamos-kernel/src/ld/: common.ld  riscv64.lds  virt.lds
crates/cinnamos-kernel/src/ld/arch/: riscv32.ld
crates/cinnamos-kernel/src/lock/: mod.rs  mutex.rs
crates/cinnamos-kernel/src/mem/: bump.rs  mem.rs  mod.rs  page.rs  palloc.rs  valloc.rs  vms.rs
crates/cinnamos-kernel/src/mem/allocator/: freelist.rs  mod.rs
crates/cinnamos-kernel/src/mem/heap/: freelist.rs  linked.rs  mod.rs
crates/cinnamos-kernel/src/mem/phys/: buddy.rs  freelist.rs  mod.rs
crates/cinnamos-kernel/src/sched/: task.rs
crates/kernel/: Cargo.toml  build.rs
crates/kernel/src/: bits.rs  console.rs  lib.rs  main.rs  page.rs  panic.rs  time.rs  trap.rs
crates/kernel/src/arch/: arch.rs  console.rs  context.rs  cpu.rs  mem.rs  mod.rs  time.rs  timer.rs  trap.rs
crates/kernel/src/arch/riscv/: console.rs  context.rs  cpu.rs  entry.s  mem.rs  mod.rs  sbi.rs  time.rs  timer.rs  trap.rs  tvec.s
crates/kernel/src/asm/: arch_riscv32.s
crates/kernel/src/boot/: linker.ld
crates/kernel/src/cpu/: interrupt.rs  local.rs  mod.rs
crates/kernel/src/kernel/: trap.rs
crates/kernel/src/mem/: kernel.rs  mem.rs
crates/kernel/src/sched/: mod.rs  queue.rs  sched.rs  task.rs
(+36 files in other folders)
