[package]
name = "cinnamos-kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cinnamos-kernel"
test = false
bench = false

[lib]
test = false
bench = false

[dependencies]
riscv = { version = "0.16.0", features = ["s-mode"] }
bitflags = "2.11.0"
fdt = "0.1.5"
lock_api = "0.4.14"
generic_once_cell = "0.1.1"

[build-dependencies]
cc = "1.2.56"
