[package]
name = "cinnamos-kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cinnamos-kernel"
test = false
bench = false

[lib]
test = false
bench = false

[dependencies]
riscv = { version = "0.16.0", features = ["s-mode"] }
sbi-rt = { version = "0.0.3", features = ["legacy"] }
bitflags = "2.10.0"
deranged = "0.5.6"

[build-dependencies]
cc = "1.2"
